--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dunes/router",
-  "version": "0.9.89",
+  "version": "0.9.90",
   "type": "module",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -18,5 +18,8 @@
   "author": "Omar <omarfkuri@gmail.com>",
   "scripts": {
     "build": "rm -rf lib && tsc && yarn version --new-version patch"
+  },
+  "dependencies": {
+    "@dunes/tag": "^0.9.75"
   }
 }
