--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
 		],
 
 		"jsx": "react",
-		"jsxFactory": "Elem.create"
+		"jsxFactory": "Elem.create",
+
+    "sourceMap": true,
+    "declarationMap": true,
+    
 	}
 }
