--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
 			"ES2020", "DOM", "DOM.Iterable"
 		],
 
+		"jsx": "react",
+		"jsxFactory": "Elem.create",
+		
     "sourceMap": true,
     "declarationMap": true,
 
